--- a/flaskProject/templates/Help.html
+++ b/flaskProject/templates/Help.html
@@ -6,7 +6,7 @@
     <h1>Help</h1>
     <h3>User Guide</h3>
 
-    <h4>How to navigate to the app</h4>
+    <h4>How to navigate through the app</h4>
     <ul>
         <li>
             In all pages there is a menu in the right side
@@ -27,7 +27,7 @@
         </li>
     </ul>
 
-    <h4>Create Event</h4>
+    <h4 id="createevent" class="helpTitle" style="padding-top: 100px" >Create Event</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Edit event</li>
@@ -43,7 +43,7 @@
     </ul>
 
     <!-- Needs to be edited -->
-    <h4>Systems</h4>
+    <h4 id="systems" class="helpTitle" style="padding-top: 100px" >Systems</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Edit event</li>
@@ -58,7 +58,7 @@
         </li>
     </ul>
 
-    <h4>Tasks</h4>
+    <h4 id="tasks" class="helpTitle" style="padding-top: 100px">Tasks</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Archive event</li>
@@ -68,7 +68,7 @@
         <li>Click on a task to be redirected to the task detailed view page</li>
     </ul>
 
-    <h4>Tasks detailed view</h4>
+    <h4 id="detailedtask" class="helpTitle" style="padding-top: 100px">Tasks detailed view</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Edit task</li>
@@ -82,7 +82,7 @@
         <li>Click on a subtask to be redirected to the subtask detailed view page</li>
     </ul>
 
-    <h4>Subtask detailed view</h4>
+    <h4 id="detailedSubtask" class="helpTitle" style="padding-top: 100px">Subtask detailed view</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Edit subtask</li>
@@ -92,7 +92,7 @@
         <li>Cjeck when the subtask is due</li>
     </ul>
 
-    <h4>Findings overview</h4>
+    <h4 id="findings" class="helpTitle" style="padding-top: 100px" >Findings overview</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Add finding</li>
@@ -105,14 +105,14 @@
         <li>Click on a finding to be redirected to the finding overview</li>
     </ul>
 
-    <h4>Finding overview</h4>
+    <h4 id="detailedFinding" class="helpTitle" style="padding-top: 100px">Finding overview</h4>
         <p>In this page we can:</p>
     <ul>
         <li>See all attributes of the finding selected</li>
         <li>Edit finding</li>
     </ul>
 
-    <h4>Archive content view</h4>
+    <h4 id="archivedContent" class="helpTitle" style="padding-top: 100px">Archived content view</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Restore archive tasks</li>
@@ -125,89 +125,7 @@
         <li>Click on a finding to be redirected to the finding overview</li>
     </ul>
 
-    <h4>Archive content view</h4>
-        <p>In this page we can:</p>
-    <ul>
-        <li>See the privileges by access level</li>
-        <li>See finding type table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See posture table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See threat level table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See impact level table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See finding classification table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See countermeasure table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See event classification table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See level table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See event type table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See finding impact table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See severity category code table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See a progress table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See event rules table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See report templates table
-            <p>Risk matrix and final technical report table</p>
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-        <li>See notification table
-            <p>Add row</p>
-            <p>Delete row</p>
-            <p>Edit row</p>
-        </li>
-    </ul>
-
-    <h4>Sync</h4>
+    <h4 id="sync" class="helpTitle" style="padding-top: 100px">Sync</h4>
         <p>In this page we can:</p>
     <ul>
         <li>Select who to sync with</li>
