--- a/flaskProject/templates/EditSubTask.html
+++ b/flaskProject/templates/EditSubTask.html
@@ -5,59 +5,51 @@
 {% block content %}
     <h1>Edit subtask</h1>
     <form>
-        <div class="form-row">
-            <div class="form-group">
-                <label for="inputTitle">Name</label>
-                <input type="email" class="form-control" id="inputTitle">
-            </div>
-            <div class="form-group">
+        <div class="form-group">
+            {{ form.subTaskName.label }}
+            <br>
+            {{ form.subTaskName(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.subTaskProgress.label }}
+            <br>
+            {{ form.subTaskProgress(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.subTaskDueDate.label }}
+            <br>
+            {{ form.subTaskDueDate(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.subTaskAttachment.label }}
+            <br>
+            {{ form.subTaskAttachment(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.associationToSubtask.label }}
+            <br>
+            {{ form.associationToSubtask(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.subTaskAnalystAssignment.label }}
+            <br>
+            {{ form.subTaskAnalystAssignment(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.subTaskCollaboratorAssignment.label }}
+            <br>
+            {{ form.subTaskCollaboratorAssignment(class_="form-control") }}
+        </div>
+        <div class="form-group">
+            {{ form.subTaskDescription.label }}
+            <br>
+            {{ form.subTaskDescription(class_="form-control") }}
+        </div>
 
-                <div class="form-group"> <!-- Date input -->
-                    <label class="control-label" for="date">Due date</label>
-                    <input id="datepicker" class="form-control" id="date" name="date" placeholder="MM/DD/YYY"
-                           type="text"/>
-                </div>
-                <script>
-                    $('#datepicker').datepicker({
-                        uiLibrary: 'bootstrap'
-                    });
-                </script>
-                <div class="form-group">
-                    <label>Assigned analysts</label>
-                    <select class="form-control">
-                        <option>Miguel Munoz</option>
-                        <option>Jonathan Roman</option>
-                        <option>Alberto Machado</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label>Collaborators </label>
-                    <select class="form-control">
-                        <option>Miguel Munoz</option>
-                        <option>Jonathan Roman</option>
-                        <option>Alberto Machado</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label Task(s) </label>
-                    <select class="form-control">
-                        <option>Task 1</option>
-                        <option>Task 2</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label> Subtask(s) </label>
-                    <select class="form-control">
-                        <option>Subtask 1</option>
-                        <option>Subtask 2</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Description</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
-                </div>
-                <button type="submit" class="btn btn-secondary"><a href="{{ url_for('SubTaskView') }}">Edit</a></button>
-                <button type="submit" class="btn btn-secondary"><a href="{{ url_for('SubTaskView') }}">Cancel</a>
-                </button>
+        <button type="submit" class="btn btn-secondary" name="editSubtask">Save</button>
+        <button type="submit" class="btn btn-secondary"><a
+                href="{{ url_for('SubTaskView', subtask=subtask.getId()) }}">Cancel</a>
+        </button>
+    <hr>
     </form>
 {% endblock content %}
