--- a/flaskProject/templates/EditSystem.html
+++ b/flaskProject/templates/EditSystem.html
@@ -41,7 +41,7 @@
             <br>
             {{ form.EditSystemDescription(class_="form-control") }}
         </div>
-        <button type="submit" class="btn btn-secondary" name="editSystem">Edit</button>
+        <button type="submit" class="btn btn-secondary" name="editSystem">Save</button>
         <button type="submit" class="btn btn-secondary"><a href="{{ url_for('SystemView', system=system.getId()) }}">Cancel</a>
         </button>
     </form>
