--- a/flaskProject/templates/EventView.html
+++ b/flaskProject/templates/EventView.html
@@ -3,7 +3,6 @@
 
 <!-- html code for the body of the page-->
 {% block content %}
-
     <h1>Event overview</h1>
     <br>
     <form method=post>
@@ -22,7 +21,7 @@
     <p>{{ event.getDescription() }} </p>
     <br>
     <h4>Event type</h4>
-    <p>{{ event.getType() }}</p>
+    <p>{{ event.getType().value }}</p>
     <hr>
     <h4>Event version</h4>
     <p>{{ event.getVersion() }}</p>
@@ -49,7 +48,7 @@
     <p>{{ event.getSecurityClassificationTitleGuide() }}</p>
     <hr>
     <h4>Event Classification</h4>
-    <p>{{ event.getEventClassification() }}</p>
+    <p>{{ event.getEventClassification().value }}</p>
     <hr>
     <h4>Archive Status</h4>
     <p>{{ event.getArchiveStatus() }}</p>
@@ -74,36 +73,6 @@
         </ul>
     {% endfor %}
     <hr>
-
-    {#    <h3>Systems Table Overview</h3>#}
-    {#    <button type="submit" class="btn btn-secondary"><a href="{{ url_for('CreateSystem') }}">Add system</a></button>#}
-    {#    <hr>#}
-    {#    <div class="list-group">#}
-    {#        {% for system in systemList %}#}
-    {#            <div class="list-group-item list-group-item-action flex-column flex-fill align-items-start">#}
-    {#                <br>#}
-    {#                <div class="d-flex w-100 p-3 flex-fill justify-content-between">#}
-    {#                    <a type="submit" href="{{ url_for('SystemView', system=system.getId()) }}">#}
-    {#                        <h5 class="mb-1">{{ system.getName() }}</h5>#}
-    {#                    </a>#}
-    {#                    <small>No. of Tasks: 4 </small>#}
-    {#                    <b>|</b>#}
-    {#                    <small>No. of Findings: 2</small>#}
-    {#                </div>#}
-    {#                <p class="mb-1">{{ system.getDescription() }}</p>#}
-    {#                <h5>Progress:</h5>#}
-    {#                <div class="progress">#}
-    {#                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25"#}
-    {#                         aria-valuemin="0"#}
-    {#                         aria-valuemax="100">25%#}
-    {#                    </div>#}
-    {#                </div>#}
-    {#                <div class="custom-control custom-checkbox mb-4">#}
-    {#                    <button type="submit" class="btn btn-secondary"><a href="">Archive System</a></button>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#        {% endfor %}#}
-    {#    </div>#}
 {% endblock content %}
 
 {% block sidebar %}
@@ -128,7 +97,7 @@
                 Configuration</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('SetupContentView') }}"> Setup</a>
             </li>
-            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Help') }}"> Help</a></li>
+            <li class="list-group-item list-group-item-light"><a href="{{ url_for('Help',_anchor='createevent') }}"> Help</a></li>
             <li class="list-group-item list-group-item-light"><a href="{{ url_for('Sync') }}"> Sync</a></li>
         </ul>
         </p>
