--- a/flaskProject/templates/layout.html
+++ b/flaskProject/templates/layout.html
@@ -11,6 +11,9 @@
     {{ super() }}
     <!-- Required meta tag -->
     <meta charset="utf-8">
+    <!-- external css file -->
+    <link rel="stylesheet" href="../static/css/main.css">
+
     <!--  jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <!-- Bootstrap Date-Picker Plugin, does this work offline???-->
@@ -25,18 +28,6 @@
         <div class="container">
             <div class="navbar-header ">
                 <a class="navbar-brand">FRIC</a>
-                <!-- Links -->
-{#                <ul class="navbar-nav">#}
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link" href="#">/Link 1</a>#}
-{#                    </li>#}
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link" href="#">/Link 2</a>#}
-{#                    </li>#}
-{#                    <li class="nav-item">#}
-{#                        <a class="nav-link" href="#">/Link 3</a>#}
-{#                    </li>#}
-{#                </ul>#}
             </div>
         </div>
     </nav>
@@ -57,4 +48,5 @@
         </div>
     </main>
 {% endblock %}
+
 </html>
